# conventional-emojis

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  conventional_emojis_config.toml  conventional_emojis_config.yaml  pyproject.toml  ruff.toml
conventional_emojis/: constants.py  exceptions.py  main.py
tests/: test_main.py
