[project]
name = "conventional-emojis"
version = "0.1.0"
description = "pre-commit hook to check if a commit message is conventional and adds emojis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
]
