[project]
name = "conventional-emojis"
version = "1.0.0"
description = "pre-commit hook to check if a commit message is conventional and adds emojis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgspec>=0.18.6",
]

[project.scripts]
conventional-emojis = "conventional_emojis.main:main"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]
